<resources>
    <string name="app_name">MetroMate</string>
    <string name="station_name">Station Name</string>
    <string name="hint_search_input">검색</string>
    <string name="search_button">검색</string>
    <string name="home_title">홈</string>
    <string name="timetable_title">시간표</string>
    <string name="fare_title">요금 계산</string>
    <string name="fare_description">요금 계산 항목이 여기에 표시됩니다.</string>
    <string name="settings_bookmark">즐겨찾기</string>
    <string name="settings_description">앱 설정 항목이 여기에 표시됩니다.</string>
    <string name="dark_mode_option">다크 모드</string>
    <string name="notification_option">알림 설정</string>
    <string name="menu_description">메뉴</string>
    <string name="resize_indicator">슬라이드 핸들</string>
    <string name="splash_image">스플래시 이미지</string>
    <string name="find_path_button">경로 찾기 버튼</string>
    <string name="goBack_description">되돌리기</string>
    <string name="hint_departure_input">출발지</string>
    <string name="hint_destination_input">도착지</string>
    <string name="hint_stopover_input">경유지</string>
    <string name="button_stopover">경유지 추가</string>
    <string name="button_swap">swap</string>
    <string name="fare_result">총 요금: %d원</string>
    <string name="passenger_info">승객 정보</string>
    <string name="adult">성인</string>
    <string name="teenager">청소년</string>
    <string name="child">어린이</string>
    <string name="payment_method">결제 방법</string>
    <string name="card">카드</string>
    <string name="cash">현금</string>
    <string name="departure_station">출발역</string>
    <string name="departure_station_hint">출발역 입력</string>
    <string name="arrival_station">도착역</string>
    <string name="arrival_station_hint">도착역 입력</string>
    <string name="waypoint_station">경유역 (선택)</string>
    <string name="waypoint_station_hint">경유역 입력 (필요시)</string>
    <string name="calculate_fare">요금 계산</string>
    <string name="total_fare_label">총 요금:</string>
    <string name="initial_fare_result">0원</string>
    <string name="subway_map_description">노선도 이미지 뷰</string>
    <string name="initial_route_count">0개의 경로가 설정되었습니다.</string>
    <string name="empty_state_image_desc">경로가 없습니다.</string>
    <string name="empty_favorites_message">즐겨찾기가 비어 있습니다.</string>
    <string name="empty_favorites_sub_message">즐겨찾기를 추가하여 빠르게 액세스하세요.</string>
    <string name="settings_favorites">즐겨찾기 설정</string>
    <string-array name="line_options">
        <item>1호선</item>
        <item>2호선</item>
        <item>3호선</item>
        <item>4호선</item>
    </string-array>
    <string name="timetable_image">Timetable Image</string>
</resources>