<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="42dp"
    android:padding="16dp" >

        <!-- 검색 입력 필드 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/departure"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:background="@drawable/background_departure"
            android:hint="@string/hint_departure_input"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="#757575" />

        <ImageButton
            android:id="@+id/action_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_search"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/button_swap" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <EditText
            android:id="@+id/search_destination"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:background="@drawable/background_destination"
            android:hint="@string/hint_destination_input"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="#757575" />

        <ImageButton
            android:id="@+id/action_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_search"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/button_stopover" />
    </LinearLayout>

    <!-- 검색 결과를 표시할 RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp" />

</LinearLayout>